--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -564,6 +564,7 @@ msgstr ""
 
 
 
+
 # General
 
 #/16x9/Content_Settings.xml
@@ -643,66 +644,81 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31422"
-msgid "Run clearlogo cropping background service"
+msgid "Background service"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31423"
-msgid "Clearlogos cached in Kodi's texture library will be cropped as they are required. Cropped versions are saved to a separate cache. Once a cropped clearlogo is cached, performance impact should be minimal. No changes are made to the original artwork. This process is run by Copacetic as a background service. Disable to improve performance."
+msgid "Enable clearlogo cropper"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31424"
-msgid "Clear cache"
+msgid "Clearlogos cached in Kodi's texture library will be cropped as they are required. Cropped versions are saved to a separate cache. Once a cropped clearlogo is cached, performance impact should be minimal. No changes are made to the original artwork. This process is run by Copacetic as a background service. Disable to improve performance."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31425"
-msgid "This will delete the cropped clearlogo cache. To prevent cropped clearlogos from being cached, make sure to disable the clearlogo cropping background service above."
+msgid "Clear cache"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31426"
-msgid "Colourise media flags"
+msgid "This will delete the cropped clearlogo cache. To prevent cropped clearlogos from being cached, make sure to disable the clearlogo cropping background service above."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31427"
-msgid "Media flags are colourised using the dominant colour from the processed clearlogo. The dominant colour will be used as long as there is enough contrast with the current background colour. You can adjust the contrast thresholds for dark and light backgrounds below."
+msgid "Colourise media flags"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31428"
-msgid "Adjust colour contrast thresholds"
+msgid "Media flags are colourised using the dominant colour from the processed clearlogo. The dominant colour will be used as long as there is enough contrast with the current background colour. You can adjust the contrast thresholds for dark and light backgrounds below."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31429"
-msgid "Adjust the amount of contrast required between the background and the flag colour. Raising the bottom threshold means only lighter colours will be accepted on dark backgrounds. Lowering the top threshold means only darker colours can be used on light backgrounds. Avoids dark flags on dark backgrounds or light flags on light backgrounds. Default range: 65 - 460."
+msgid "Adjust colour contrast thresholds"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31430"
-msgid "Enable background slideshows"
+msgid "Adjust the amount of contrast required between the background and the flag colour. Raising the bottom threshold means only lighter colours will be accepted on dark backgrounds. Lowering the top threshold means only darker colours can be used on light backgrounds. Avoids dark flags on dark backgrounds or light flags on light backgrounds. Default range: 65 - 460."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31431"
-msgid "Fanarts are fetched from your library and displayed in a slideshow by Copacetic as a background service. The service only runs when the slideshow is visible. Disable to improve performance."
+msgid "Enable background slideshows"
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31432"
-msgid "Slideshow speed (seconds)"
+msgid "Fanarts are fetched from your library and displayed in a slideshow by Copacetic as a background service. The service only runs when the slideshow is visible. Disable to improve performance."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31433"
-msgid "Prefer keyart for poster views"
+msgid "Limit artwork to..."
 msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31434"
+msgid "Choose to include only fanarts from the selected sections of your library in the background slideshow."
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31435"
+msgid "Slideshow speed (seconds)"
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31436"
+msgid "Prefer keyart for poster views"
+msgstr ""
+
+#/16x9/Content_Settings.xml
+msgctxt "#31437"
 msgid "Keyart is a custom art type. To ensure it is fetched locally or remotely by scrapers, make sure 'keyart' is included in your art type whitelists for movies and / or tv shows. You can do this by choosing 'Recommended Kodi Settings' at the top of this menu, or by navigating to Settings > Media > Videos > Artwork."
 msgstr ""
 
