clearlogos for home widgets

--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -86,19 +86,16 @@ msgstr ""
 
 
 #: T
-# NEW
 #/16x9/Templates_Dialogs.xml, /16x9/Notifications.xml
 msgctxt "#31009"
 msgid "Like song"
 msgstr ""
 
-# NEW
 #/16x9/Templates_Dialogs.xml, /16x9/Notifications.xml
 msgctxt "#31010"
 msgid "Unlike song"
 msgstr ""
 
-# NEW
 #/16x9/Templates_Dialogs.xml, /16x9/Content_Infoscreens.xml
 msgctxt "#31011"
 msgid "Create radio station"
@@ -600,7 +597,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31506"
-msgid "New features being tested or those requested by users that don't necessarily meet the desisgn ethos of the rest of Copacetic. It's recommended to leave these off as they may harm the overall user experience."
+msgid "New features being tested or those requested by users that don't necessarily meet the desisgn ethos of the rest of Copacetic. It's recommended to leave these off for optimal user experience."
 msgstr ""
 
 
@@ -782,7 +779,7 @@ msgstr ""
 
 #/16x9/Content_Settings.xml
 msgctxt "#31429"
-msgid "Enable widgets"
+msgid "Enable home screen widgets"
 msgstr "
 
 #/16x9/Content_Settings.xml
@@ -790,9 +787,15 @@ msgctxt "#31529"
 msgid "Add widgets to your homescreen. To configure, go to the Widgets tab in the left menu. Choose from preset widgets, such as 'Continue watching', 'Next up' and 'Liked songs', or configure your own using any plugin source. Then select the view and display type you want to use for each widget. For custom widgets, you can also set the name, sort method and limit."
 msgstr "
 
+#: NEW
+#/16x9/Variables_Labels_Media.xml
+msgctxt "#31476"
+msgid "Enable clearlogos for home screen widgets"
+msgstr ""
+
 #/16x9/Content_Settings.xml
 msgctxt "#31430"
-msgid "Reset widgets"
+msgid "Reset home screen widgets"
 msgstr ""
 
 #/16x9/Content_Settings.xml
